# json2jsonschema

./: .sesskey  README.md  main.py  pyproject.toml  requirements.txt
